--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@
     display: none;
   }
 
+
+
   /*Navbar (general)*/
   nav {
     display: flex;
@@ -94,6 +96,8 @@
     align-items: center;
   }
 
+
+
   /*Menú en Desktop*/
   .desktop-menu {
     position: absolute;
@@ -106,32 +110,40 @@
     border-radius: 6px;
     padding: 20px 20px 0 20px;
   }
+
   .desktop-menu ul {
     list-style: none;
     padding: 0;
     margin: 0;
   }
+
   .desktop-menu ul li {
     text-align: end;
   }
+
   .desktop-menu ul li:nth-child(1),
   .desktop-menu ul li:nth-child(2) {
     font-weight: bold;
   }
+
   .desktop-menu ul li:last-child {
     padding-top: 20px;
     border-top: 1px solid var(--very-light-pink);
   }
+
   .desktop-menu ul li:last-child a {
     color: var(--hospital-green);
     font-size: var(--sm);
   }
+
   .desktop-menu ul li a {
     color: var(--back);
     text-decoration: none;
     margin-bottom: 20px;
     display: inline-block;
   }
+
+
 
   /*Menú en Mobile*/
   .mobile-menu {
@@ -140,31 +152,39 @@
     top: 60px;
     padding: 24px;
   }
+
   .mobile-menu a {
     text-decoration: none;
     color: var(--black);
     font-weight: bold;
     /* margin-bottom: 24px; */
   }
+
   .mobile-menu ul {
     padding: 0;
     margin: 24px 0 0;
     list-style: none;
   }
+
   .mobile-menu ul:nth-child(1) {
     border-bottom: 1px solid var(--very-light-pink);
   }
+
   .mobile-menu ul li {
     margin-bottom: 24px;
   }
+
   .email {
     font-size: var(--sm);
     font-weight: 300 !important;
   }
+
   .sign-out {
     font-size: var(--sm);
     color: var(--hospital-green) !important;
   }
+
+
 
   /*Aside (product detail y carrito*/
   .product-detail {
@@ -175,17 +195,21 @@
     position: absolute;
     right: 0;
   }
+
   .title-container {
     display: flex;
   }
+
   .title-container img {
     transform: rotate(180deg);
     margin-right: 14px;
   }
+
   .title {
     font-size: var(--lg);
     font-weight: bold;
   }
+
   .order {
     display: grid;
     grid-template-columns: auto 1fr;
@@ -196,18 +220,22 @@
     border-radius: 8px;
     padding: 0 24px;
   }
+
   .order p:nth-child(1) {
     display: flex;
     flex-direction: column;
   }
+
   .order p span:nth-child(1) {
     font-size: var(--md);
     font-weight: bold;
   }
+
   .order p:nth-child(2) {
     text-align: end;
     font-weight: bold;
   }
+
   .shopping-cart {
     display: grid;
     grid-template-columns: auto 1fr auto auto;
@@ -215,22 +243,27 @@
     margin-bottom: 24px;
     align-items: center;
   }
+
   .shopping-cart figure {
     margin: 0;
   }
+
   .shopping-cart figure img {
     width: 70px;
     height: 70px;
     border-radius: 20px;
     object-fit: cover;
   }
+
   .shopping-cart p:nth-child(2) {
     color: var(--very-light-pink);
   }
+
   .shopping-cart p:nth-child(3) {
     font-size: var(--md);
     font-weight: bold;
   }
+
   .primary-button {
     background-color: var(--hospital-green);
     border-radius: 8px;
@@ -244,6 +277,60 @@
   }
   
 
+
+  /*Product List*/
+  .cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 26px;
+    place-content: center;
+    margin-top: 32px;
+  }
+
+  .product-card {
+    width: 240px;
+  }
+
+  .product-card img {
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover;
+  }
+
+  .product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+  }
+
+  .product-info figure {
+    margin: 0;
+  }
+
+  .product-info figure img {
+    width: 35px;
+    height: 35px;
+  }
+
+  .product-info div p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+  }
+
+  .product-info div p:nth-child(2) {
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--very-light-pink);
+  }
+
+
+
+  /*Media Querys*/
   @media (max-width: 640px) {
     .menu {
       display: block;
@@ -259,6 +346,16 @@
     }
     .product-detail {
       width: 100%;
+    }
+    .cards-container {
+      grid-template-columns: repeat(auto-fill, 140px);
+    }
+    .product-card {
+      width: 140px;
+    }
+    .product-card img {
+      width: 140px;
+      height: 140px;
     }
   }
 
